--- a/templates/carbono/index.html
+++ b/templates/carbono/index.html
@@ -1,7 +1,28 @@
-{% extends 'carbono/base.html' %}
 {% load static %}
-{% block content %}
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Créditos de Carbono</title>
+  <link rel="stylesheet" href="style/style.css">
+  <script src="js(s)/interacao.js"></script>
+</head>
+<body>
+  <header>
+    <div class="navbar">
+      <h1>Créditos de Carbono</h1>
+      <nav>
+        <ul>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#beneficios">Benefícios</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- A imagem não está renderizando por algum motivo que não faço ideia :). Pode ser a minha máquina, quando teste me avisa   -->
   <section class="hero">
     <div class="hero-content">
       <h2>Reduzindo a Pegada de Carbono</h2>
@@ -10,7 +31,7 @@
     </div>
   </section>
 
-  <section id="sobre" class="container text">
+  <section id="sobre" class="container text fade-in">
     <h2>O que são Créditos de Carbono?</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod quae tenetur eveniet est voluptates esse harum rem, optio at expedita, id, praesentium doloremque pariatur commodi dolor neque perferendis. Dolorum rem, laudantium perferendis nesciunt a odit, deserunt quae fugit hic aut culpa eum. Iste sapiente illo consequuntur dolorem porro doloremque explicabo, neque provident blanditiis possimus ea, quae ullam rerum numquam delectus, libero deserunt asperiores error reiciendis. Ab suscipit obcaecati illo, pariatur saepe fugiat nesciunt voluptatum architecto quas! Eligendi ratione iste placeat voluptate sint reiciendis. Alias voluptatem totam enim rerum explicabo exercitationem aliquid quae magnam ab qui, ea maiores porro possimus, ipsa, molestiae mollitia iusto. Id deserunt earum nihil praesentium ullam cupiditate a molestias voluptatum, quos eos quas perferendis odio suscipit nobis ut nam nulla distinctio rem repellendus atque iure eum accusantium illo. Atque animi ducimus illo harum molestiae autem repellat totam eos commodi optio. Illum, enim aut odio rem sequi dignissimos dicta ea praesentium dolorem laboriosam quos vero! Architecto laboriosam, totam assumenda aut corporis atque? Assumenda commodi, eveniet magni accusantium sed cupiditate quasi at iste aperiam fuga rerum.</p>
 
@@ -33,21 +54,43 @@
       
   </section>
 
-  <section id="xx" class="yyy">
-    <div id="zzzz" class="fffff">
+  
+  <section id="destaque"  class="texto_informativo">
+    <div id="informacao" class="descricao">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione molestias architecto blanditiis quam. Dolore, doloribus nisi molestiae facilis possimus porro ex nulla. Alias consequatur deserunt, fugit dolorum tempore sapiente. Officia, necessitatibus eos qui temporibus corporis, distinctio fugiat vero corrupti quae itaque rerum totam nostrum animi at cumque fugit recusandae ex! Beatae atque voluptatem modi asperiores quo quis necessitatibus cupiditate dolorem suscipit, quisquam perferendis architecto nostrum commodi quidem quod cumque praesentium eum veritatis assumenda alias! Possimus numquam rerum dolore itaque, molestiae eaque officiis facere? Hic eligendi nulla voluptas consectetur a laudantium iusto, enim accusamus adipisci accusantium sed. Animi perferendis fuga debitis consequatur alias repudiandae, quasi, eaque vel cum labore iusto pariatur quos expedita molestias rerum omnis. Iure nobis tenetur consequuntur ex nihil, cum quaerat labore. Ipsa magni incidunt consequatur excepturi eius praesentium vero quibusdam aliquam illo quisquam, eum asperiores. Quam delectus eius porro quod nostrum doloribus ipsam veniam ad inventore. Fuga, error fugiat. Beatae veritatis similique fuga optio ad labore quisquam explicabo libero rem alias ut animi, cupiditate dignissimos nisi molestias nam expedita, doloremque tenetur aut sit eos, sunt nobis laudantium! Illo neque tempora autem ipsam ipsum magni cum consequatur officia, doloribus, aliquid labore earum provident dolor expedita. Officiis unde, nobis error quidem obcaecati esse voluptate necessitatibus commodi dolores soluta dolor aperiam libero ipsa sequi. Fugit consequatur error inventore expedita dolores, necessitatibus quisquam saepe quas voluptatem tempora suscipit! Aliquam adipisci sequi laudantium voluptatem sint cumque praesentium quaerat harum non ab vero, fugiat recusandae qui perferendis, error ducimus saepe veritatis quam odit aut officia reiciendis optio. Vitae illo officia tempora, iste nihil, molestiae, quae at itaque voluptatibus aperiam placeat voluptatum explicabo ipsum laudantium quod sit adipisci quisquam? Distinctio, voluptatibus officia. Rerum sunt omnis dolores excepturi molestiae qui asperiores laboriosam architecto minima non numquam atque aspernatur obcaecati exercitationem eius reiciendis, deserunt ullam maxime magnam. Rem magnam impedit omnis id dolorem voluptatum qui voluptate. Neque magnam veniam repellat similique velit hic incidunt qui fuga distinctio officiis eveniet expedita delectus repudiandae, consequuntur, quod fugiat adipisci officia porro tempora dolorem laboriosam? Nihil labore ipsum molestias placeat perferendis! Obcaecati repellat pariatur doloremque quasi cumque culpa provident incidunt velit eligendi sequi deleniti, voluptas dolorem quos a ipsum natus dolore officiis architecto quisquam repellendus. Repellat distinctio tenetur rerum eius facere laborum, aliquid incidunt labore maxime, culpa ut, eum exercitationem possimus quaerat. Inventore incidunt laudantium laboriosam voluptates repellat repellendus reiciendis veniam fuga ea deleniti? Sapiente molestiae culpa esse nostrum recusandae!</p>
     </div>
   </section>
 
-  <section class="beato">
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-a" >Teste Calculadora 1</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-g" >Teste Calculadora 2</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-b" >Teste Calculadora 3</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="energia" >Teste Calculadora 4</button></a>
-
-
+  <section>
+    <div id="ini_calc">
+      <h1>Ajude a salvar o Planeta</h1>
+    </div>
+    <div id = "ops_calc">
+      <h2>Qual das opções abaixo deseja calcular a emissão de carbono? </h2>
+    </div>
   </section>
 
+  
+  
+  <section id="botton" class="botoes">
+    <button id="carro-a" class="funcionam">
+      <img src="assets/pngwing.com (1).png" alt="Carro a álcool" class="btn-image">
+      <p>Carro a álcool</p> 
+    </button>
+    <button id="carro-g" class="funcionam">
+      <img src="assets/pngwing.com (2).png" alt="carro a gasolina" class="btn-image">
+      <p>Carro a gasolina</p> 
+    </button>
+    <button id="onibus" class="funcionam">
+      <img src="assets/pngwing.com (2).png" alt="onibus" class="btn-image">
+      <p>transporte Público</p> 
+    </button>
+    <button id="energia" class="funcionam">
+      <img src="assets/eco-friendly-recycling-concept.png" alt="Tomada elétrica" class="btn-image">
+      <p>Energia elétrica</p>
+    </button>
+  </section>
+  
   
   <section id="faq" class="container">
     <h2>FAQ</h2>
@@ -61,4 +104,11 @@
     </details>
   </section>
 
-{% endblock %}
+
+  <footer>
+    <p> © Aps - Unip - 2024 </p>
+  </footer>
+
+  <script src="js(s)/redirecao.js"></script>
+</body>
+</html>
