--- a/templates/carbono/index.html
+++ b/templates/carbono/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Créditos de Carbono</title>
   <link rel="stylesheet" href="{% static 'style/style.css' %}">
+  <link rel="icon" type="image/png" sizes="100x100" href="{% static 'assets/favicon_d.png' %}">
   <script src="{% static 'js(s)/interacao.js' %}"></script>
 </head>
 <body>
