Ajuste de diretórios

--- a/templates/carbono/index.html
+++ b/templates/carbono/index.html
@@ -7,7 +7,7 @@
   <title>Créditos de Carbono</title>
   <link rel="stylesheet" href="{% static 'style/style.css' %}">
   <link rel="icon" type="image/png" sizes="100x100" href="{% static 'assets/favicon_d.png' %}">
-  <script src="{% static 'js(s)/interacao.js' %}"></script>
+  <script src="{% static 'js/interacao.js' %}"></script>
 </head>
 <body>
   <header>
