--- a/templates/carbono/calculadora.html
+++ b/templates/carbono/calculadora.html
@@ -8,7 +8,7 @@
   <title>Cálculo de Carbono</title>
   <link rel="stylesheet" href="{% static 'style/pagsegundaria.css' %}">
   <link rel="icon" type="image/png" sizes="100x100" href="{% static 'assets/favicon_d.png' %}">
-  <script src="{% static 'js(s)/calculo.js' %}"></script>
+  <script src="{% static 'js/calculo.js' %}"></script>
 </head>
 <body>
   <header>
