--- a/templates/carbono/calculadora.html
+++ b/templates/carbono/calculadora.html
@@ -93,7 +93,7 @@
       {% endif %} 
     </div>
     
-    <!-- Energia Calculation Form -->
+    <!-- Calculadora Energia -->
     <div class="calculadora" id="energia-calculo">
         <h2>Energia Elétrica</h2>
         <form method="post">
@@ -127,7 +127,7 @@
         {% endif %}
     </div>
   </div>
-
+  <!-- Resultados finais -->
   <div class="emissao-container calculadora-container">
     <div class="calculadora" id="emissao-total">
       <h3>Total de emissão em Toneladas:</h3>
