--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -8,19 +8,34 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #e6e1e1;
     color: #333;
+    font-size: 1.1rem;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #002f6c;
-    color: white;
+    background: linear-gradient(135deg, #002f6c, #58d17e);
+    color: white; 
     padding: 15px 10%;
 }
 
-.navbar h1 {
-    font-size: 1.8rem;
+.icone-texto {
+    display: flex;
+    align-items: center; 
+}
+  
+.imagem-navbar {
+    width: 55px; 
+    height: auto; 
+    margin-right: 10px; 
+}
+  
+.titulo-nav {
+    font-size: 1.6rem;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .navbar ul {
@@ -44,8 +59,7 @@ body {
 }
 
 .hero {
-    /*A imagem não está renderizando por algum motivo que não faço ideia :). Pode ser a minha máquina, quando teste me avisa */
-    background-image: url('front-end/assets/ima2.jpg');
+    background-image: url(front-end\assets\img-principal.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -59,16 +73,21 @@ body {
     justify-content: center;
 }
 
+.titulo-texto{
+    text-align: center;   
+}
+
+
 .hero h2 {
     font-size: 3.0rem;
 }
 
 .hero p {
-    font-size: 1.3rem;
+    /* font-size: 1.3rem; */
     margin: 20px 0;
 }
 
-.hero .btn {
+.btn {
     padding: 10px 20px;
     background-color: #007b5e;
     color: white;
@@ -76,12 +95,66 @@ body {
     border-radius: 5px;
 }
 
-.hero .btn:hover {
+.btn:hover {
     background-color: #005f46;
 }
 
 .container {
     padding: 50px 10%;
+}
+
+
+.texto-explicacao {
+    margin-top: 20px;
+    background-color: #ffffff;
+    height: auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0.3, 0.3);
+    width: 80.4%;
+    margin-left: 170px;
+    display: block;
+    text-align: justify;
+    font-size: 18px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+}
+
+.texto-explicacao:hover {
+    transform: scale(1.05);
+    transition: transform 0.2s ease;
+}
+
+.titulo-explicacao {
+    text-align: center;
+}
+
+.informacoes {
+    line-height: 1.6;
+    background-color: #f9f9f9; 
+    color: #333333;
+    padding: 15px; 
+    border-left: 4px solid #4CAF50; 
+    border-radius: 8px; 
+    box-shadow:  0px 4px 8px rgba(0, 0, 0, 0.1); 
+    margin: 20px 0; 
+}
+
+.texto-com-imagem { 
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    text-align: justify;
+    margin-top: 20px;
+}
+
+#animacao-texto {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#animacao-texto:hover {
+    transform: scale(1.09);
+    transition: opacity 0.2s ease-out, transform 0.2s ease-out;
 }
 
 .text {
@@ -95,6 +168,21 @@ body {
     margin-left: 170px;
 }
 
+
+.imagem{
+    max-width: 575px;
+    width: 575px;
+    height: 400px;
+    border-radius: 8px ;
+    margin-top: 25px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.imagem:hover {
+    transform: scale(1.07);
+    transition: transform 0.2s ease;
+}
+
 p {
     margin-top: 10px;
 }
@@ -103,6 +191,7 @@ p {
     margin-top: 15px;
     display: flex;
     justify-content: space-between;
+    text-align: justify;
 }
 
 .card {
@@ -110,111 +199,11 @@ p {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0.3, 0.3);
-    width: 45%;
+    width: 49%;
 }
-
-.card h3 {
-    margin-bottom: 10px;
-}
-
-.texto_informativo {
-    background-color: #467bc0;
-    padding: 20px 10%;
-    margin: 20px 0px;
-    height: auto;
-}
-
-.botoes {
-    display: flex;
-    justify-content: space-around; 
-    flex-wrap: wrap; 
-    padding: 20px; 
-    border-radius: 8px; 
-    
-}
-
-#botton {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap; 
-    gap: 20px; 
-    padding: 20px;
-}
-
-.funcionam {
-    display: flex;
-    flex-direction: column; 
-    align-items: center;
-    background-color: #4346ee; 
-    color: white;
-    padding: 15px;
-    border: none;
-    border-radius: 100px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    cursor: pointer;
-    transition: transform 0.3s ease, box-shadow 0.3s ease; 
-    width: 200px; 
-}
-
-.funcionam:hover {
-    transform: translateY(-5px); 
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
-}
-
-.btn-image {
-    width: 100px; 
-    height: 100px;
-    margin-bottom: 10px; 
-}
-
-
-.botoes {
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-}
-
-#ini_calc {
-    align-items: center;
-    text-align: center;
-}
-
-#ops_calc{
-    padding: 20px;
-    margin-left: 150px;
-}
-
-details {
-    margin: 10px 0;
-}
-
-footer {
-    background-color: #002f6c;
-    color: white;
-    padding: 20px 10%;
-}
-
-
-.fade-in {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-}
-
-.fade-in.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.btn:hover {
-    background-color: #005f46;
-    transform: scale(1.05);
-    transition: transform 0.2s ease;
-}
-
 
 .card {
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .card:hover {
@@ -222,72 +211,86 @@ footer {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
-
-.funcionam:hover {
-    background-color: #005f46;
-    transform: scale(1.05);
-    transition: transform 0.2s ease;
+.card h3 {
+    margin-bottom: 10px;
 }
 
-
-
-
-
-@media (max-width: 1024px) {
-    .navbar ul {
-        flex-direction: column;
-    }
-    .text, .card {
-        width: 100%;
-        margin: 10px 0;
-    }
-    .cards {
-        flex-direction: column;
-    }
-    .hero h2 {
-        font-size: 2.5rem;
-    }
-    .hero p {
-        font-size: 1.1rem;
-    }
+#destaque { 
+    margin-top: 30px;
 }
 
-@media (max-width: 768px) {
-    .hero {
-        padding: 200px 5%;
-    }
-    .navbar h1 {
-        font-size: 1.5rem;
-    }
-    .text {
-        margin-left: 0;
-    }
-    .navbar ul {
-        flex-direction: column;
-        align-items: center;
-    }
+.texto-explicacao ul {
+    margin: 10px 0; 
+    padding-left: 20px;
 }
 
-@media (max-width: 480px) {
-    .navbar h1 {
-        font-size: 1.2rem;
-    }
-    .hero {
-        padding: 150px 5%;
-        text-align: center;
-    }
-    .hero h2 {
-        font-size: 2rem;
-    }
-    .hero p {
-        font-size: 1rem;
-    }
-    .navbar ul {
-        flex-direction: column;
-        gap: 10px;
-    }
-    .cards {
-        flex-direction: column;
-    }
+.texto-explicacao li {
+    margin-bottom: 10px;
 }
 
+.lista-surgimento {
+    background-color: #f9f9f9;
+    color: #333333;
+    padding: 15px; 
+    border-left: 4px solid #4CAF50; 
+    border-radius: 8px; 
+    box-shadow:  0px 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 10px;
+}
+
+.pre-calculadora {
+    margin: 35px auto; 
+    width: 80.5%;
+    text-align: center;
+    padding: 50px 20px;
+    background: linear-gradient(135deg, #002f6c, #58d17e);
+    color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+  
+.pre-calculadora::before {
+    transform-origin: center;
+}
+
+#calculadora h1 {
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: #fff;
+}
+  
+#calculadora p {
+    font-size: 1.2em;
+    margin-bottom: 25px;
+}
+
+.btn-calc {
+    display: inline-block;
+    padding: 14px 32px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.1em;
+    text-decoration: none;
+    background: #002f6c;
+    border-radius: 50px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.btn-calc:hover {
+    transform: scale(1.05); 
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+}
+
+details {
+    margin: 10px 0;
+}
+
+footer {
+    background: linear-gradient(135deg, #58d17e ,#002f6c);
+    color: white;
+    padding: 20px 10%;
+    text-align: center;
+    color: #000;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}  
