Complemento de comentários

--- a/templates/carbono/calculadora.html
+++ b/templates/carbono/calculadora.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cálculo de Carbono</title>
   <link rel="stylesheet" href="{% static 'style/pagsegundaria.css' %}">
-  <link rel="icon" type="image/png" sizes="100x100" href="{% static 'assets/favicon_d.png' %}">
+  <link rel="icon" type="image/png" sizes="50x50" href="{% static 'assets/favicon.png' %}">
   <script src="{% static 'js/calculo.js' %}"></script>
 </head>
 <body>
